--- a/ui/index.html
+++ b/ui/index.html
@@ -52,15 +52,19 @@
 
     .usage-meter { margin-top:10px; padding:10px 12px; border-radius:10px; border:1px solid rgba(0,255,65,0.35); background:rgba(0,255,65,0.05); font-size:13px; text-align:center; }
 
-    .result-card { margin-top:36px; padding:28px; border:1px solid rgba(0,255,65,0.35); border-radius:18px; background:radial-gradient(circle at top,#112311 0%, #080c08 65%); box-shadow:0 0 36px rgba(0,255,65,0.18); }
-    .result-header { text-align:center; margin-bottom:22px; }
-    .result-value { font-size:54px; font-weight:600; color:var(--bright); text-shadow:0 0 28px rgba(0,255,65,0.35); }
-    .result-subtitle { font-size:14px; text-transform:uppercase; letter-spacing:2px; color:var(--muted); }
-    .result-explainer { margin-top:16px; padding:18px; border-radius:14px; border:1px solid rgba(0,255,65,0.25); background:rgba(0,255,65,0.05); text-align:left; }
-    .result-explainer h3 { margin:0 0 10px; font-size:18px; color:var(--bright); }
-    .result-explainer p { margin:0 0 12px; color:var(--muted); line-height:1.6; }
-    .result-explainer ul { margin:0; padding-left:20px; color:var(--muted); line-height:1.6; }
-    .result-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); gap:22px; }
+    .result-card { margin-top:40px; padding:32px; border:1px solid rgba(0,255,65,0.35); border-radius:20px; background:radial-gradient(circle at top,#112311 0%, #080c08 65%); box-shadow:0 0 42px rgba(0,255,65,0.24); }
+    .result-hero { display:flex; gap:34px; flex-wrap:wrap; align-items:center; justify-content:space-between; border-bottom:1px solid rgba(0,255,65,0.18); padding-bottom:24px; }
+    .result-pill { display:inline-flex; align-items:center; gap:8px; padding:8px 14px; border-radius:999px; border:1px solid rgba(0,255,65,0.35); background:rgba(0,255,65,0.1); font-size:12px; letter-spacing:1px; text-transform:uppercase; color:var(--bright); margin-bottom:16px; }
+    .result-percent { font-size:clamp(56px, 10vw, 112px); font-weight:700; color:var(--bright); text-shadow:0 0 36px rgba(0,255,65,0.35); line-height:1; }
+    .result-verdict-tag { font-size:16px; text-transform:uppercase; letter-spacing:3px; color:var(--muted); margin-top:8px; }
+    .result-claim-block { max-width:540px; }
+    .result-claim { font-size:22px; line-height:1.6; color:var(--fg); margin-bottom:16px; }
+    .result-interpretation { font-size:18px; color:var(--muted); line-height:1.6; }
+    .result-explainer { margin-top:28px; padding:24px; border-radius:16px; border:1px solid rgba(0,255,65,0.25); background:rgba(0,255,65,0.04); text-align:left; }
+    .result-explainer h3 { margin:0 0 12px; font-size:20px; color:var(--bright); }
+    .result-explainer p { margin:0 0 14px; color:var(--muted); line-height:1.6; }
+    .result-explainer ul { margin:0; padding-left:22px; color:var(--muted); line-height:1.6; list-style:disc; }
+    .result-grid { margin-top:28px; display:grid; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); gap:22px; }
     .metric-label { font-size:12px; text-transform:uppercase; letter-spacing:1px; color:var(--muted); margin-bottom:6px; }
     .metric-value { font-size:18px; font-weight:500; }
     .metric-note { font-size:12px; color:var(--muted); margin-top:4px; }
@@ -216,13 +220,20 @@
     </section>
 
     <section id="result-card" class="result-card hidden" aria-live="polite">
-      <div class="result-header">
-        <div class="result-value" id="result-prob">--</div>
-        <div class="result-subtitle" id="result-subtitle">Probability this claim is true</div>
+      <div class="result-hero">
+        <div>
+          <div class="result-pill" id="result-pill">GPT‑5 · Internal knowledge only</div>
+          <div class="result-percent" id="result-percentage">--%</div>
+          <div class="result-verdict-tag" id="result-subtitle">Probability this claim is true</div>
+        </div>
+        <div class="result-claim-block">
+          <div class="result-claim" id="result-claim">“—”</div>
+          <p class="result-interpretation" id="result-interpretation-main"></p>
+        </div>
       </div>
       <div class="result-explainer hidden" id="result-explainer">
         <h3 id="result-verdict">—</h3>
-        <p id="result-interpretation"></p>
+        <p id="result-interpretation-detail"></p>
         <ul id="result-reasons" class="hidden"></ul>
       </div>
       <div class="result-grid">
@@ -390,8 +401,11 @@
       var statusEl = claimForm ? claimForm.querySelector('.footnote') : null;
       var usageEl = document.getElementById('usage-meter');
       var resultCard = document.getElementById('result-card');
-      var resultProb = document.getElementById('result-prob');
+      var resultProb = document.getElementById('result-prob'); // legacy element (kept for compatibility)
+      var resultPercentage = document.getElementById('result-percentage');
       var resultSubtitle = document.getElementById('result-subtitle');
+      var resultClaimEl = document.getElementById('result-claim');
+      var resultPill = document.getElementById('result-pill');
       var resultCi = document.getElementById('result-ci');
       var resultStability = document.getElementById('result-stability');
       var resultBand = document.getElementById('result-stability-band');
@@ -399,7 +413,8 @@
       var resultJson = document.getElementById('result-json');
       var resultExplainer = document.getElementById('result-explainer');
       var resultVerdict = document.getElementById('result-verdict');
-      var resultInterpretation = document.getElementById('result-interpretation');
+      var resultInterpretationMain = document.getElementById('result-interpretation-main');
+      var resultInterpretationDetail = document.getElementById('result-interpretation-detail');
       var resultReasons = document.getElementById('result-reasons');
       var loadingOverlay = document.getElementById('loading-overlay');
       var loadingClaim = document.getElementById('loading-claim');
@@ -484,9 +499,16 @@
       }
 
       function renderResult(data) {
-        if (!resultCard || !data) return;
+      if (!resultCard || !data) return;
         var probValue = data.aggregates && typeof data.aggregates.prob_true_rpl === 'number' ? data.aggregates.prob_true_rpl : 0;
-        resultProb.textContent = formatPercent(probValue);
+        var percentText = formatPercent(probValue);
+        if (resultProb) { resultProb.textContent = percentText; }
+        if (resultPercentage) { resultPercentage.textContent = percentText; }
+        if (resultClaimEl && data.claim) { resultClaimEl.textContent = '“' + data.claim + '”'; }
+        if (resultPill) {
+          var pillText = (data.model || 'GPT‑5') + ' · Internal knowledge only';
+          resultPill.textContent = pillText;
+        }
         if (Array.isArray(data.aggregates.ci95)) {
           var lo = formatPercent(data.aggregates.ci95[0]);
           var hi = formatPercent(data.aggregates.ci95[1]);
@@ -508,13 +530,19 @@
           resultSubtitle.textContent = verdictLabel ? verdictLabel + ' · Probability this claim is true' : 'Probability this claim is true';
         }
 
-        if (resultExplainer && resultVerdict && resultInterpretation) {
+        if (resultInterpretationMain) {
+          resultInterpretationMain.textContent = interpretation;
+        }
+
+        if (resultExplainer && resultVerdict) {
           resultVerdict.textContent = headline;
-          resultInterpretation.textContent = interpretation;
+          if (resultInterpretationDetail) {
+            resultInterpretationDetail.textContent = interpretation;
+          }
 
           if (resultReasons) {
-         var apiReasons = Array.isArray(data.explanation_reasons) ? data.explanation_reasons.filter(Boolean) : [];
-          var reasonList = apiReasons.length ? apiReasons : buildReasons(probValue);
+            var apiReasons = Array.isArray(data.explanation_reasons) ? data.explanation_reasons.filter(Boolean) : [];
+            var reasonList = apiReasons.length ? apiReasons : buildReasons(probValue);
             resultReasons.innerHTML = '';
             if (reasonList.length) {
               reasonList.forEach(function(line){
